--- a/packages/provider/packages/contract/package.json
+++ b/packages/provider/packages/contract/package.json
@@ -11,15 +11,32 @@
   "scripts": {
     "build": "yarn tsc -b . --verbose"
   },
+  "resolutions": {
+    "@polkadot/api": "7.5.1",
+    "@polkadot/api-contract": "7.5.1",
+    "@polkadot/api-derive": "7.5.1",
+    "@polkadot/api-augment": "7.5.1",
+    "@polkadot/apps-config": "0.103.1",
+    "@polkadot/keyring": "8.3.3",
+    "@polkadot/types": "7.5.1",
+    "@polkadot/networks": "8.3.3",
+    "@polkadot/util": "8.3.3",
+    "@polkadot/x-fetch": "8.3.3",
+    "@polkadot/util-crypto": "8.3.3",
+    "rxjs": "7.5.2"
+  },
   "dependencies": {
-    "@polkadot/api": "7.11.1",
-    "@polkadot/api-contract": "7.11.1",
-    "@polkadot/keyring": "8.4.1",
-    "@polkadot/types": "7.11.1",
-    "@polkadot/types-known": "7.11.1",
-    "@polkadot/util": "8.4.1",
-    "@polkadot/util-crypto": "8.4.1",
-    "@polkadot/wasm-crypto": "4.5.1",
+    "@polkadot/api": "7.5.1",
+    "@polkadot/api-augment": "7.5.1",
+    "@polkadot/api-contract": "7.5.1",
+    "@polkadot/api-derive": "7.5.1",
+    "@polkadot/apps-config": "0.103.1",
+    "@polkadot/keyring": "8.3.3",
+    "@polkadot/networks": "8.3.3",
+    "@polkadot/types": "7.5.1",
+    "@polkadot/util": "8.3.3",
+    "@polkadot/util-crypto": "8.3.3",
+    "@polkadot/x-fetch": "8.3.3",
     "@redspot/chai": "file:../../../../redspot/build/redspot-chai",
     "@redspot/decimals": "file:../../../../redspot/build/redspot-decimals",
     "@redspot/explorer": "file:../../../../redspot/build/redspot-explorer",
@@ -60,5 +77,8 @@
     "prettier": "^2.5.1",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5"
-  }
+  },
+  "files": [
+    "./redspot.config.ts"
+  ]
 }
