--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -20,18 +20,16 @@
     "dev-provider-dataset": "yarn build && yarn start provider_add_data_set --file /usr/src/data/captchas.json"
   },
   "dependencies": {
-    "@polkadot/api-contract": "7.12.1",
-    "@polkadot/keyring": "8.5.1",
-    "@polkadot/types": "7.12.1",
-    "@polkadot/util": "8.5.1",
-    "@polkadot/util-crypto": "8.5.1",
     "@prosopo/contract": "0.0.0",
     "@redspot/chai": "0.13.6",
     "@redspot/decimals": "0.13.6",
     "@redspot/explorer": "0.13.6",
+    "@redspot/gas-reporter": "0.13.6",
+    "@redspot/known-types": "0.13.6",
     "@redspot/patract": "0.13.6",
     "@redspot/watcher": "0.13.6",
     "@types/mocha": "^9.0.0",
+    "c8": "^7.11.0",
     "consola": "^2.15.0",
     "cors": "^2.8.5",
     "cron": "^1.8.2",
@@ -42,22 +40,26 @@
     "mongodb": "^4.1.4",
     "pm2": "^5.2.0",
     "redspot": "0.13.6",
-    "yargs": "^15.4.1",
     "zod": "^3.11.6"
   },
   "devDependencies": {
+    "@rushstack/eslint-patch": "^1.0.6",
     "@types/chai": "^4.2.14",
     "@types/chai-as-promised": "^7.1.5",
     "@types/express": "^4.17.13",
     "@types/find-up": "^4.0.0",
     "@types/node": "^17.0.8",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
+    "@typescript-eslint/parser": "^5.10.0",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "dotenv": "^14.3.2",
     "mocha": "8.4.0",
+    "prettier": "^2.5.1",
     "ts-mocha": "^10.0.0",
     "ts-node": "^10.5.0",
-    "typescript": "^4.5.5"
+    "typescript": "^4.5.5",
+    "yargs-parser": "^21.0.1"
   },
   "repository": {
     "type": "git",
