--- a/packages/procaptcha/package.json
+++ b/packages/procaptcha/package.json
@@ -9,10 +9,17 @@
     "build": "tsc --build --verbose"
   },
   "dependencies": {
-
-  },
-  "devDependencies": {
-
+    "@prosopo/contract": "0.0.0",
+    "@prosopo/provider": "0.0.0",
+    "@polkadot/api": "^8.7.1",
+    "@polkadot/api-contract": "^8.7.1",
+    "@polkadot/extension-dapp": "^0.44.1",
+    "@polkadot/extension-inject": "^0.44.1",
+    "@polkadot/rpc-provider": "^8.7.1",
+    "@polkadot/types": "^8.7.1",
+    "@polkadot/util": "^9.4.1",
+    "@polkadot/util-crypto": "^9.4.1",
+    "axios": "^0.27.2"
   },
   "keywords": [],
   "author": "",
