--- a/packages/procaptcha-react/package.json
+++ b/packages/procaptcha-react/package.json
@@ -6,17 +6,21 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "tsc --build --clean",
-    "build": "yarn build:esm",
-    "build:esm": "tsc --build --verbose"
+    "build": "tsc --build --verbose"
+  },
+  "dependencies": {
+    "@mui/material": "^5.8.2",
+    "@mui/styles": "^5.8.0",
+    "@prosopo/procaptcha": "0.0.0",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0"
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.12",
+    "typescript": "^4.7.3"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-
-  },
-  "devDependencies": {
-
-  },
   "types": "./build/index.d.ts",
   "repository": {
     "type": "git",
