--- a/packages/procaptcha-react/package.json
+++ b/packages/procaptcha-react/package.json
@@ -9,14 +9,15 @@
     "build": "tsc --build --verbose"
   },
   "dependencies": {
-    "@mui/material": "^5.8.2",
-    "@mui/styles": "^5.8.0",
+    "@mui/material": "^5.8.3",
+    "@mui/styles": "^5.8.3",
     "@prosopo/procaptcha": "0.0.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.12",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "typescript": "^4.7.3"
   },
   "author": "",
