--- a/packages/procaptcha/tsconfig.json
+++ b/packages/procaptcha/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfig.build.json",
   "compilerOptions": {
     "rootDir": "./src",
-    "outDir": "./build",
+    "outDir": "./dist",
     "target": "esnext",
     "module": "esnext",
     "lib": [
