--- a/packages/procaptcha-react/package.json
+++ b/packages/procaptcha-react/package.json
@@ -2,7 +2,8 @@
   "name": "@prosopo/procaptcha-react",
   "version": "0.0.0",
   "private": true,
-  "main": "build/index.js",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "tsc --build --clean",
@@ -22,7 +23,6 @@
   },
   "author": "",
   "license": "ISC",
-  "types": "./build/index.d.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/prosopo-io/procaptcha-react.git"
