--- a/demos/demo-nft-marketplace/contract/Cargo.toml
+++ b/demos/demo-nft-marketplace/contract/Cargo.toml
@@ -15,7 +15,7 @@ ink_prelude = { version = "3.2.0", default-features = false }
 scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
 scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
 
-brush = { tag = "v1.7.1", git = "https://github.com/Supercolony-net/openbrush-contracts", default-features = false, features = ["psp34"] }
+brush = { tag = "v1.7.1", git = "https://github.com/Supercolony-net/openbrush-contracts", default-features = false, features = ["psp34", "ownable"] }
 
 prosopo = { path = "../../../protocol/contracts", default-features = false, features = ["ink-as-dependency"] }
 
