--- a/packages/procaptcha/tsconfig.json
+++ b/packages/procaptcha/tsconfig.json
@@ -3,12 +3,13 @@
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "./dist",
+    "module": "commonjs",
     "target": "esnext",
-    "module": "esnext",
+    "types": ["mocha"],
     "lib": [
       "esnext",
       "dom"
-    ]
+    ],
   },
   "include": [
     "./src/**/*.ts"
