--- a/demos/demo-nft-marketplace/package.json
+++ b/demos/demo-nft-marketplace/package.json
@@ -38,6 +38,7 @@
     "postcss-cli": "^8.3.1",
     "postcss-loader": "^4.2.0",
     "react": "^17.0.0",
+    "react-currency-input-field": "^3.6.4",
     "react-dom": "^17.0.0",
     "react-query": "^3.25.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
