--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -13,9 +13,8 @@
     "setup": "ts-node ./scripts/setup.ts",
     "mnemonic": "ts-node ./scripts/generateMnemonic.ts",
     "imageserver:start": "ts-node ./scripts/imageserver.ts",
-    "test": "npm run remove-test-container && docker compose up -d substrate-test-node && NODE_ENV=test ts-mocha \"tests/**/*.test.ts\" --timeout 120000",
+    "test": "NODE_ENV=test ts-mocha \"tests/**/*.test.ts\" --timeout 120000",
     "coverage": "npx c8 npm run test",
-    "remove-test-container": "CONTAINER=$(docker ps -q -f name=substrate-test-node) && docker stop $CONTAINER || true && docker rm $CONTAINER || true",
     "populate-data": "ts-node ./src/dataUtils/populateDatabase.ts",
     "dev-provider-register": "npm run cli -- provider_register --fee=10 --origin=https://localhost:8282 --payee=Provider --address=$PROVIDER_ADDRESS",
     "dev-provider-stake": "npm run cli -- provider_update --value 2000000000000 --address=$PROVIDER_ADDRESS",
