--- a/.github/workflows/tests_provider.yml
+++ b/.github/workflows/tests_provider.yml
@@ -62,8 +62,8 @@ jobs:
 
       - if: steps.image-cache.outputs.cache-hit != 'true'
         run: |
-          docker pull prosopo/substrate:dev-aura-bd39450fa8794ef385be198d239372a469a73b39
-          docker save -o ~/image-cache/prosopo.tar prosopo/substrate:dev-aura-bd39450fa8794ef385be198d239372a469a73b39
+          docker pull prosopo/substrate:dev-aura-aadbbed50ede27817158c7517f13f6f61c9cf000
+          docker save -o ~/image-cache/prosopo.tar prosopo/substrate:dev-aura-aadbbed50ede27817158c7517f13f6f61c9cf000
           docker pull mongo:5.0.4
           docker save -o ~/image-cache/mongo.tar mongo:5.0.4
 
@@ -102,18 +102,7 @@ jobs:
         run: |
           cd captcha
           echo $(npx tsc --version)
-          cd packages/common && echo $(pwd) && echo $(git rev-parse HEAD) && npm run build
-          cd ../types && echo $(pwd) && echo $(git rev-parse HEAD) && npm run build
-          cd ../types-database && echo $(pwd) && echo $(git rev-parse HEAD) && npm run build
-          cd ../types-env && echo $(pwd) && echo $(git rev-parse HEAD) && npm run build
-          cd ../database && echo $(pwd) && echo $(git rev-parse HEAD) && npm run build
-          cd ../env && echo $(pwd) && echo $(git rev-parse HEAD) && npm run build
-          cd ../datasets && echo $(pwd) && echo $(git rev-parse HEAD) && npm run build
-          cd ../contract && echo $(pwd) && echo $(git rev-parse HEAD) && npm run build
-          cd ../provider && echo $(pwd) && echo $(git rev-parse HEAD) && npm run build
-          cd ../cli && echo $(pwd) && echo $(git rev-parse HEAD) && npm run build
-          cd ../../dev && echo $(pwd) && echo $(git rev-parse HEAD) && npm run build
-          
+          cd dev && echo $(pwd) && echo $(git rev-parse HEAD) && npm run build
 
       - name: Setup the environment and run the unit tests
         run: |
