--- a/docker/docker-compose.substrate-node.yml
+++ b/docker/docker-compose.substrate-node.yml
@@ -1,7 +1,7 @@
 version: '3.4'
 services:
   substrate-node:
-    image: prosopo/substrate-node:dev
+    image: prosopo/substrate-node:polkadot-v0.9.43
     build:
       context: .
       dockerfile: ./images/substrate-node.build.dockerfile
