--- a/demos/client-example/package.json
+++ b/demos/client-example/package.json
@@ -10,6 +10,7 @@
         "@testing-library/jest-dom": "^5.16.4",
         "@types/react-dom": "^18.2.4",
         "bootstrap": "^5.2.2",
+        "electron": "25.0.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-scripts": "5.0.1",
