--- a/.github/workflows/tests_provider.yml
+++ b/.github/workflows/tests_provider.yml
@@ -77,6 +77,7 @@ jobs:
         run: |
           cd scripts
           docker compose --file ./docker/docker-compose.development.yml up -d
+          docker container ls
 
       - id: node-cache
         uses: actions/cache@v3
