--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "version": "npm --no-git-tag-version --allow-same-version --workspaces --workspaces-update version",
     "ls:ws": "npm run --workspaces env | grep npm_package_name | cut -d '=' -f 2",
     "setup": "npm -w @prosopo/dev run setup",
+    "setup:all": "npm run deploy_protocol && npm run deploy_dapp && npm run setup",
     "start:provider": "npm -w @prosopo/cli run start",
     "start:server": "npm -w @prosopo/client-example-server run start",
     "start:demo": "npm -w @prosopo/client-example run start",
