--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,13 +19,13 @@ jobs:
 
       - name: Npm install
         run: |
-          cd dev
+          cd protocol/dev
           npm install
 
       # Check if rust is formatted correctly
       - name: Rust formatting check
         run: |
-          cd dev
+          cd protocol/dev
           npm run cli -- fmt --check --toolchain nightly --docker
           # take ownership of the build files so they can be cached
           npm run cli -- chown
@@ -52,7 +52,7 @@ jobs:
       # Check for clippy advice
       - name: Clippy
         run: |
-          cd dev
+          cd protocol/dev
           npm run cli -- clippy --toolchain nightly --docker
           # take ownership of the build files so they can be cached
           npm run cli -- chown
@@ -61,7 +61,7 @@ jobs:
       - name: Build contract
         id: build
         run: | 
-          cd dev
+          cd protocol/dev
           npm run cli -- build --release --toolchain nightly --docker
           # take ownership of the build files so they can be cached
           npm run cli -- chown
@@ -69,7 +69,7 @@ jobs:
       # Do unit testing
       - name: Test contract
         run: |
-          cd dev
+          cd protocol/dev
           RUST_BACKTRACE=1 npm run cli -- test --toolchain nightly --docker
           result=$?
           # take ownership of the build files so they can be cached
