--- a/.github/workflows/image_provider.yml
+++ b/.github/workflows/image_provider.yml
@@ -29,12 +29,28 @@ jobs:
           path: captcha
           submodules: recursive
 
-      # Get the version of the provider image from the version of the root package.json
+      # Get the provider image version from the root package.json and the latest package version from npm
       - name: Get provider image version
-        id: get_provider_image_version
         run: |
           cd captcha
           echo "PROVIDER_IMAGE_VERSION=$(cat package.json | jq -r '.version')" >> $GITHUB_ENV
+          echo "LATEST_PROVIDER_VERSION=$(npm view @prosopo/provider version)" >> $GITHUB_ENV
+
+      # Check if the provider image version is greater than the latest version on the npm package @prosopo/provider
+      # For example, if the provider image version is 0.1.7 and the latest npm version is 0.1.6, then the provider image
+      # version is greater. If the provider image version is 0.1.6 and the latest npm version is 0.1.6, then the provider
+      # image version is not greater, and the workflow will not continue unless the provider image version is updated in
+      # the root package.json. Technically, this check doesn't cover the case where the provider image version is lower
+      # than the latest npm version, but that should never happen.
+      - name: Check provider image version
+        id: check_provider_image_version
+        run: |
+          echo "PROVIDER_IMAGE_VERSION=${{ env.PROVIDER_IMAGE_VERSION }}"
+          echo "LATEST_PROVIDER_VERSION=${{ env.LATEST_PROVIDER_VERSION }}"
+          if [ "${{ env.PROVIDER_IMAGE_VERSION }}" == "${{ env.LATEST_PROVIDER_VERSION }}" ]; then
+              echo "Provider image version is not greater than the latest npm version. Please update the provider image version in the root package.json"
+              exit 1
+          fi
 
       # npm install
       - name: Npm install
