--- a/.github/workflows/tests_provider.yml
+++ b/.github/workflows/tests_provider.yml
@@ -90,11 +90,10 @@ jobs:
       # Checks if the git hash of packages is the same after running linting
       - name: Linter
         run: |
-          PACKAGES_HASH=$(git ls-files -s captcha | git hash-object --stdin)
           cd captcha
+          PACKAGES_HASH=$(git ls-files | git hash-object --stdin)
           npm run lint:fix
-          cd ..
-          NEW_PACKAGES_HASH=$(git ls-files -s captcha | git hash-object --stdin)
+          NEW_PACKAGES_HASH=$(git ls-files | git hash-object --stdin)
           if [ "$PACKAGES_HASH" != "$NEW_PACKAGES_HASH" ]; then
             echo "Linter failed"
             exit 1
