--- a/.github/workflows/tests_provider.yml
+++ b/.github/workflows/tests_provider.yml
@@ -87,13 +87,17 @@ jobs:
           ls .
           npm install
 
-      # Checks if the git hash of packages is the same after running linting
-      - name: Linter
+      # Checks if the git hash of packages is the same after running linting by comparing the git tree hash before
+      # linting to a temporary git index file and root tree hash after linting
+      - name: Linting check
         run: |
           cd captcha
-          PACKAGES_HASH=$(git ls-files | git hash-object --stdin)
+          PACKAGES_HASH=$(git show HEAD --format=%T | head -1)
           npm run lint:fix
-          NEW_PACKAGES_HASH=$(git ls-files | git hash-object --stdin)
+          cp .git/index /tmp/git_index
+          export GIT_INDEX_FILE=/tmp/git_index
+          git add -u
+          NEW_PACKAGES_HASH=$(git write-tree)
           echo "PACKAGES_HASH: $PACKAGES_HASH"
           echo "NEW_PACKAGES_HASH: $NEW_PACKAGES_HASH"
           if [ "$PACKAGES_HASH" != "$NEW_PACKAGES_HASH" ]; then
