--- a/packages/datasets-fs/package.json
+++ b/packages/datasets-fs/package.json
@@ -32,6 +32,8 @@
         "zod": "^3.21.4"
     },
     "devDependencies": {
+        "@types/bcrypt": "^5.0.0",
+        "@types/cli-progress": "^3.11.0",
         "@types/mocha": "^10.0.0",
         "typescript": "^4.9.5"
     },
