--- a/packages/datasets-fs/package.json
+++ b/packages/datasets-fs/package.json
@@ -35,6 +35,7 @@
         "@types/bcrypt": "^5.0.0",
         "@types/cli-progress": "^3.11.0",
         "@types/mocha": "^10.0.0",
+        "@types/node-fetch": "^2.6.4",
         "typescript": "^4.9.5"
     },
     "repository": {
