--- a/packages/file-server/tsconfig.json
+++ b/packages/file-server/tsconfig.json
@@ -1,12 +1,10 @@
 {
-    "extends": "../../tsconfig.build.json",
+    "extends": "../../tsconfig.esm.json",
     "compilerOptions": {
         "rootDir": "./src",
-        "outDir": "./dist",
-        "module": "esnext",
-        "target": "esnext"
+        "outDir": "./dist"
     },
-    "include": ["./src/**/*.ts", "./src/*.ts"],
+    "include": ["./src/**/*.ts", "./src/**/*.json"],
     "references": [
         {
             "path": "../common"
