--- a/packages/file-server/package.json
+++ b/packages/file-server/package.json
@@ -15,11 +15,13 @@
         "@prosopo/common": "^0.1.17",
         "dotenv": "^16.0.1",
         "es-main": "^1.2.0",
-        "express": "^4.18.2",
         "node-fetch": "^3.3.2",
+        "express": "^4.18.2",
         "sharp": "^0.32.4"
     },
     "devDependencies": {
+        "@types/express": "^4.17.17",
+        "@types/node": "^20.5.9",
         "typescript": "^4.9.5"
     },
     "author": "Prosopo",
