--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -1,19 +1,10 @@
 {
-    "extends": "../../tsconfig.build.json",
+    "extends": "../../tsconfig.esm.json",
     "compilerOptions": {
         "rootDir": "./src",
-        "outDir": "./dist",
-        "module": "esnext",
-        "target": "esnext",
-        "lib": [
-            "esnext",
-            "dom"
-        ],
+        "outDir": "./dist"
     },
-    "include": [
-        "./src/**/*.ts",
-        "./src/*.ts"
-    ],
+    "include": ["./src/**/*.ts", "./src/**/*.json"],
     "references": [
         {
             "path": "../api"
